Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76680

[REG 5.12 -> 5.13] x86_64-w64-mingw32-g++-win32 cross build on Linux fails

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.13.1, 5.14.0 Alpha
    • 5.13.0
    • Build System
    • None
    • Linux/X11
    • 605062b21fccff919b7894db91b197d120e528f6 (qt/qtbase/5.13)

      when trying to build qt 5.13 cross-platform using the x86_64-w64-mingw32-g++-win32 compiler configure.log, a syntax error occurs build.log

      bad if use x86_64-w64-mingw32-g++-posix all good

      By default, ubuntu uses x86_64-w64-mingw32-g ++ - win32, so this build problem needs to be solved.

      Selection Path Priority Status
      ------------------------------------------------------------

      • 0 /usr/bin/x86_64-w64-mingw32-g++-win32 60 auto mode
        1 /usr/bin/x86_64-w64-mingw32-g++-posix 30 manual mode
        2 /usr/bin/x86_64-w64-mingw32-g++-win32 60 manual mode

      fix please

        1. configure.log
          28 kB
          Andrei Yankovich
        2. build.log
          376 kB
          Andrei Yankovich
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jbornema Joerg Bornemann
            endrii Andrei Yankovich
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes